data/derived/sp14/progs/unify/prog0776.ml.out
Characters 111-121:
  if List.mem h then
     ^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
